# featherface-train

./: .gitignore  LICENSE  README.md  pyproject.toml  test_widerface.py  train.py
data/: config.py
exports/: featherface_model.onnx  featherface_model.pt  featherface_model.pth
layers/functions/: prior_box.py
models/: net.py  retinaface.py
notebooks/: 01_train_cbam_baseline.ipynb
weights/: mobilenet0.25_Final.pth  mobilenet0.25_Final_backup.pth  mobilenet0.25_epoch_10.pth  mobilenet0.25_epoch_100.pth  mobilenet0.25_epoch_110.pth  mobilenet0.25_epoch_120.pth  mobilenet0.25_epoch_130.pth  mobilenet0.25_epoch_140.pth  mobilenet0.25_epoch_150.pth  mobilenet0.25_epoch_160.pth  mobilenet0.25_epoch_170.pth  mobilenet0.25_epoch_180.pth  mobilenet0.25_epoch_190.pth  mobilenet0.25_epoch_195.pth  mobilenet0.25_epoch_20.pth  mobilenet0.25_epoch_200.pth  mobilenet0.25_epoch_205.pth  mobilenet0.25_epoch_210.pth  mobilenet0.25_epoch_215.pth  mobilenet0.25_epoch_220.pth  mobilenet0.25_epoch_225.pth
widerface_evaluate/: box_overlaps.c  evaluation.py
