[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "featherface"
version = "2.0.0"
description = "FeatherFace: CBAM vs ODConv scientific comparison for lightweight face detection (485K-489K parameters)"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Original: dohun-mat"},
    {name = "Scientific Comparison: fokouarnaud"}
]

dependencies = [
    # Deep Learning Framework
    "torch>=1.10.0",
    "torchvision>=0.11.0",
    
    # Computer Vision
    "opencv-contrib-python>=4.5.0",
    "albumentations>=1.0.0",
    
    # Scientific Computing
    "numpy>=1.19.0",
    "scipy>=1.5.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.3.0",
    
    # Data Processing
    "pandas>=1.3.0",
    "pillow>=8.0.0",
    "tqdm>=4.62.0",
    
    # ONNX Export
    "onnx>=1.10.0",
    "onnxruntime>=1.9.0",
    "onnxsim>=0.3.0",  # Package name is onnxsim not onnx-simplifier
    
    # Jupyter Support
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "ipywidgets>=7.6.0",
    
    # Additional Tools
    "tensorboard>=2.7.0",
    "seaborn>=0.11.0",
    "pyyaml>=5.4.0",
    "gdown>=4.0.0",  # For Google Drive downloads
    
    # For knowledge distillation
    "timm>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
    "isort>=5.9",
]

quantization = [
    "pytorch_quantization>=2.1.0",
]

[tool.setuptools]
packages = {find = {exclude = ["notebooks*", "analysis*", "results*", "weights*", "widerface_evaluate*"]}}

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
line_length = 100
